--- a/.gitlocalize.yml
+++ b/.gitlocalize.yml
@@ -1,19 +1,13 @@
 pretranslate:
   segments:
-    ignore_frontmatter_keys:
-    - "layout"
-    - "permalink"
-    - "noindex"
-    - "date"
-    - "override"
-    - "codelabs"
-    - "tags"
-    - "authors"
     ignore_patterns:
-    - !ruby/regexp /{%\s?([a-zA-Z0-9\.\,\-\?\'\"\s]*)\s?%}/    
+    - "{%\s?([a-zA-Z'\"\s]*)\s?%}"
+    - "{%\s?Aside\s?('[a-z]+')?\s?%}"
+    - "Native"
+    - "^(title|authors|date|description): "
+
   paths:
-  - source: .
+  - source: "src/site/content/en/angular"
     include:
-    - "README.md"
-settings:
-  ignore_escaped_strings: true
+    - "**/index.md"
+    - "accessible-angular-with-codelyzer/index.md"
