--- a/.gitlocalize.yml
+++ b/.gitlocalize.yml
@@ -1,3 +1,24 @@
 settings:
   remove_quotes_in_frontmatter:
    - "false"
+pretranslate:
+  segments:
+    ignore_frontmatter_keys:
+    - "layout"
+    - "permalink"
+    - "noindex"
+    - "date"
+    - "override"
+    - "codelabs"
+    - "tags"
+    - "authors"
+
+    ignore_patterns:
+     - !ruby/regexp /{%\s?([a-zA-Z0-9\.\-\?\'\"\,\!\s\/]*)\s?%}/
+     - !ruby/regexp /{%\s?end([a-zA-Z0-9\.\-\?\'\"\,\!\s]*)\s?%}/
+     - !ruby/regexp /{%\s?AssessmentCallout([a-zA-Z0-9\.\-\?\'\"\,\!\s]*)\s?%}/
+
+  paths:
+  - source: "src/site/content/en"
+    include:
+    - "lighthouse-performance/**/*.md"
