--- a/.gitlocalize.yml
+++ b/.gitlocalize.yml
@@ -12,6 +12,7 @@ pretranslate:
     - "codelabs"
     - "tags"
     - "authors"
+    - "translated"
 
     ignore_patterns:
      - !ruby/regexp /{%\s?([a-zA-Z0-9\.\-\?\'\"\,\!\s\/]*)\s?%}/
