--- a/.gitlocalize.yml
+++ b/.gitlocalize.yml
@@ -14,7 +14,8 @@ segments:
   ignore_frontmatter_keys:
     - "authors"
     - "translated"
-
+    - "tags"
+    
     ignore_patterns:
      - !ruby/regexp /{%\s?([a-zA-Z0-9\.\-\?\'\"\,\!\s\/]*)\s?%}/
      - !ruby/regexp /{%\s?end([a-zA-Z0-9\.\-\?\'\"\,\!\s]*)\s?%}/
