--- a/.gitlocalize.yml
+++ b/.gitlocalize.yml
@@ -1,3 +1,9 @@
 settings:
   remove_quotes_in_frontmatter:
    - "false"
+segments:
+  ignore_frontmatter_keys:
+  - "authors"
+  - "translated"
+  - "tags"
+  
